force-app/main/default/objects/Contact/fields/Account_Book_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Book_Owner__c</fullName>
    <formula>Account.Books_Of_Business__r.AE__r.FirstName &amp; &apos; &apos; &amp; Account.Books_Of_Business__r.AE__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Book Owner</label>
    <type>Text</type>
</CustomField>