force-app/main/default/objects/Contact/fields/Account_Size_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Size_Segment__c</fullName>
    <formula>Account.Account_Size_Segment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Size Segment</label>
    <type>Text</type>
</CustomField>