force-app/main/default/objects/Contact/fields/Account_VG_Installs__c.field-meta.xml
<CustomField>
    <fullName>Account_VG_Installs__c</fullName>
    <formula>Account.VG_installs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Account VG Installs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>