force-app/main/default/objects/Contact/fields/Active_Growth_Campaigns_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Growth_Campaigns_Count__c</fullName>
    <description>This field counts the number of active growth campaigns the contact belongs to.</description>
    <label>Active Growth Campaigns Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>