force-app/main/default/objects/Contact/fields/actively_contact_explanation__c.field-meta.xml
<CustomField>
    <fullName>actively_contact_explanation__c</fullName>
    <label>Actively Contact Explanation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>