force-app/main/default/objects/Contact/fields/actively_current_top_contact__c.field-meta.xml
<CustomField>
    <fullName>actively_current_top_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actively Current Top Contact</label>
    <type>Checkbox</type>
</CustomField>