force-app/main/default/objects/Contact/fields/ADR_Assignment__c.field-meta.xml
<CustomField>
    <fullName>ADR_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADR Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>