force-app/main/default/objects/Contact/fields/ADR_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>ADR_Demo_Date__c</fullName>
    <description>Datetime the demo was scheduled</description>
    <label>ADR Demo Date</label>
    <type>DateTime</type>
</CustomField>