force-app/main/default/objects/Contact/fields/ADR_Transfer__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is checked if the contact is an ADR transfer</description>
    <label>ADR Transfer</label>
    <type>Checkbox</type>
</CustomField>