force-app/main/default/objects/Contact/fields/ADR_Transfer_By__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the user that transferred the contact</description>
    <label>ADR Transfer By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>