force-app/main/default/objects/Contact/fields/ADR_Transfer_By_Role_at_Contact__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer_By_Role_at_Contact__c</fullName>
    <formula>ADR_Transfer_By__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRICAT ADR Transfer By Role at Contact</label>
    <type>Text</type>
</CustomField>