force-app/main/default/objects/Contact/fields/ADR_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer_Date__c</fullName>
    <description>Datetime the contact was transferred</description>
    <label>ADR Transfer Date</label>
    <type>DateTime</type>
</CustomField>