force-app/main/default/objects/Contact/fields/ADR_Transfer_Log__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADR Transfer Log</label>
    <referenceTo>ADR_Transfer_Log__c</referenceTo>
    <relationshipLabel>Additional Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>