force-app/main/default/objects/Contact/fields/ADR_Transfer_Status__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer_Status__c</fullName>
    <description>Transfer status for the ADR. When selecting any Disqualified option, contact moved back to ADR using trigger.</description>
    <label>ADR Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Scheduled</fullName>
            </value>
            <value>
                <fullName>Demo No Show</fullName>
            </value>
            <value>
                <fullName>Disqualified - No Opportunity</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Disqualified - Already Engaged</fullName>
                <isActive>false</isActive>
                <label>Disqualified - Already Engaged</label>
            </value>
            <value>
                <fullName>Disqualified - Wrong Profile</fullName>
                <isActive>false</isActive>
                <label>Disqualified - Wrong Profile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>