force-app/main/default/objects/Contact/fields/Amended_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Amended_Contract_Number__c</fullName>
    <description>Stores the contract number for amended opportunities</description>
    <inlineHelpText>Contract number associated with this contact for amended opportunities</inlineHelpText>
    <label>Amended Contract Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>