force-app/main/default/objects/Contact/fields/appirio_core__Licensed_Features__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Licensed_Features__c</fullName>
    <label>Deprecated:Licensed Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Timecard Only</fullName>
            </value>
            <value>
                <fullName>Expenses Only</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Open Enrollment</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>