force-app/main/default/objects/Contact/fields/Associated_Lawful_Basis__c.field-meta.xml
<CustomField>
    <fullName>Associated_Lawful_Basis__c</fullName>
    <label>Associated Lawful Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Consent</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Legitimate Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>