force-app/main/default/objects/Contact/fields/AVA__AVAAI_assistant__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_assistant__c</fullName>
    <description>The name of the Assistant the Contact is assigned to in Conversica</description>
    <inlineHelpText>The name of the Assistant the Contact is assigned to in Conversica</inlineHelpText>
    <label>Conversica Assistant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>