force-app/main/default/objects/Contact/fields/Billing_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_First_Name__c</fullName>
    <description>Denotes billing contact&apos;s first name for associated account. Done for Hubspot use.</description>
    <label>Billing First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>