force-app/main/default/objects/Contact/fields/Billing_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Last_Name__c</fullName>
    <description>Denotes billing contact&apos;s last name for associated account. Done for Hubspot integration.</description>
    <label>Billing Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>