force-app/main/default/objects/Contact/fields/CAE_Routing__c.field-meta.xml
<CustomField>
    <fullName>CAE_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>CAE Routing based on Deal Registration Margins</inlineHelpText>
    <label>CAE Routing</label>
    <type>Checkbox</type>
</CustomField>