force-app/main/default/objects/Contact/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <description>Used by process builder upon lead conversion to add campaignmember to contact, which is used by the legacy round robin system.</description>
    <label>Campaign Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Visited Booth</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>