force-app/main/default/objects/Contact/fields/Campaign_Member_Status_Temp__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status_Temp__c</fullName>
    <label>Campaign Member Status Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>