force-app/main/default/objects/Contact/fields/Campaign_to_Add__c.field-meta.xml
<CustomField>
    <fullName>Campaign_to_Add__c</fullName>
    <description>Populated via Lead conversion, a process builder picks up this field and inserts a campaignmember, which is used by the legacy round robin process.</description>
    <label>Campaign to Add</label>
    <length>18</length>
    <type>Text</type>
</CustomField>