force-app/main/default/objects/Contact/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>