force-app/main/default/objects/Contact/fields/Channel_Source__c.field-meta.xml
<CustomField>
    <fullName>Channel_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field used to demarcate if inbound lead comes from our Channel partners. Automatically cleared once the lead is converted to Contact</inlineHelpText>
    <label>Channel Source</label>
    <type>Checkbox</type>
</CustomField>