force-app/main/default/objects/Contact/fields/Chatbot_Source__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Source__c</fullName>
    <formula>OR(
 ISPICKVAL(Source__c, &apos;Chatbot&apos;),
 ISPICKVAL(LeadSource, &apos;Chatbot&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chatbot Source</label>
    <type>Checkbox</type>
</CustomField>