force-app/main/default/objects/Contact/fields/Churn_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Churn_Payment_Status__c</fullName>
    <formula>Text(Account.Churn_Payment_Status__c)</formula>
    <label>Churn Payment Status</label>
    <type>Text</type>
</CustomField>