force-app/main/default/objects/Contact/fields/Churn_Update_CC_Link__c.field-meta.xml
<CustomField>
    <fullName>Churn_Update_CC_Link__c</fullName>
    <formula>Account.Churn_Update_CC_Link__c</formula>
    <label>Churn Update CC Link</label>
    <type>Text</type>
</CustomField>