force-app/main/default/objects/Contact/fields/Concatenated_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_CampaignId__c</fullName>
    <label>Concatenated CampaignId</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>