force-app/main/default/objects/Contact/fields/Contact_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_Changed__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Contact Status Changed</label>
    <type>DateTime</type>
</CustomField>