force-app/main/default/objects/Contact/fields/Converted_Contact__c.field-meta.xml
<CustomField>
    <fullName>Converted_Contact__c</fullName>
    <label>Converted Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>