force-app/main/default/objects/Contact/fields/Converted_Hashtags_to_Append__c.field-meta.xml
<CustomField>
    <fullName>Converted_Hashtags_to_Append__c</fullName>
    <description>When a lead is converted and merged into an existing contact, use this field as a temporary container so we can append the lead&apos;s Hashtag field.</description>
    <label>Converted Hashtag to Append</label>
    <length>255</length>
    <type>Text</type>
</CustomField>