force-app/main/default/objects/Contact/fields/CSM_Phone__c.field-meta.xml
<CustomField>
    <fullName>CSM_Phone__c</fullName>
    <formula>Account.CSM__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Phone</label>
    <type>Text</type>
</CustomField>