force-app/main/default/objects/Contact/fields/Dashboard_Last_Activity_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Last_Activity_Datetime__c</fullName>
    <description>Keeps track of the last time this particular contact performed any activity in Samsara&apos;s platform.</description>
    <label>Dashboard Last Activity Datetime</label>
    <type>DateTime</type>
</CustomField>