force-app/main/default/objects/Contact/fields/Data_Addendum_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Data_Addendum_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the contact has accepted the generated data sharing addendum.</description>
    <inlineHelpText>Whether or not the contact has accepted the generated data sharing addendum.</inlineHelpText>
    <label>Data Addendum Accepted?</label>
    <type>Checkbox</type>
</CustomField>