force-app/main/default/objects/Contact/fields/Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date__c</fullName>
    <description>Date the contact received a product demo</description>
    <inlineHelpText>Date the contact received a product demo</inlineHelpText>
    <label>Demo Completed Date</label>
    <type>Date</type>
</CustomField>