force-app/main/default/objects/Contact/fields/Demo_Scheduled_For_Past_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_For_Past_7_Days__c</fullName>
    <formula>Scheduled_Demo_Date__c &gt;= NOW()-7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Scheduled For Past 7 Days?</label>
    <type>Checkbox</type>
</CustomField>