force-app/main/default/objects/Contact/fields/Do_Not_Call_if_UK__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_if_UK__c</fullName>
    <description>Used for PhoneTools GTMS-20474</description>
    <formula>IF(OR(Account.BillingCountry=&apos;United Kingdom&apos;,ISBLANK(Account.BillingCountry)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Call if UK</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>