force-app/main/default/objects/Contact/fields/Email_Product_Ann_Updates_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Product_Ann_Updates_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-9872: This field syncs with Marketo for customer email preferences. Do not delete without first talking to Marketo Admin.</description>
    <inlineHelpText>This field can be set in SFDC or Marketo. It indicates that a user should be opted in of the Marketing Product Announcement &amp; Update emails.</inlineHelpText>
    <label>Email - Product Ann. &amp; Updates Opt In</label>
    <type>Checkbox</type>
</CustomField>