force-app/main/default/objects/Contact/fields/Email_Surveys_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Surveys_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email - Surveys Opt In</label>
    <type>Checkbox</type>
</CustomField>