force-app/main/default/objects/Contact/fields/Enrolled_in_Hubspot_Churn_Program__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_Hubspot_Churn_Program__c</fullName>
    <formula>AND( TEXT(Account.Churn_Payment_Status__c) = &quot;Delinquent&quot;, NOT( Churn_Do_Not_Email__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled in Hubspot Churn Program</label>
    <type>Checkbox</type>
</CustomField>