force-app/main/default/objects/Contact/fields/Express_Abandoned_Cart_Link_c__c.field-meta.xml
<CustomField>
    <fullName>Express_Abandoned_Cart_Link_c__c</fullName>
    <description>A copy of most recent express agreement link from opportunity associated with contact. Used for Hubspot</description>
    <label>Express_Abandoned_Cart_Link__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>