force-app/main/default/objects/Contact/fields/Express_Agreement_Link_Copy__c.field-meta.xml
<CustomField>
    <fullName>Express_Agreement_Link_Copy__c</fullName>
    <description>Copy of most recent Express Agreement that is not closed/won. Used for Hubspot purposes. If all Opptys associated with contact are closed/won then this value will be the most recent oppty that was closed/won.</description>
    <label>Express Agreement Link Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>