force-app/main/default/objects/Contact/fields/FFX_Generic_Resource__c.field-meta.xml
<CustomField>
    <fullName>FFX_Generic_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the resource is a &quot;dummy&quot; contact.</inlineHelpText>
    <label>Generic Resource</label>
    <type>Checkbox</type>
</CustomField>