force-app/main/default/objects/Contact/fields/First_Page_Visited__c.field-meta.xml
<CustomField>
    <fullName>First_Page_Visited__c</fullName>
    <description>URL slug of the first page people visited before filling out the form</description>
    <label>First Page Visited</label>
    <length>128</length>
    <type>Text</type>
</CustomField>