force-app/main/default/objects/Contact/fields/First_Touch_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Touch Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>