force-app/main/default/objects/Contact/fields/First_Touch_Campaign_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Campaign_Date_Time__c</fullName>
    <label>First Touch Campaign Date/Time</label>
    <type>DateTime</type>
</CustomField>