force-app/main/default/objects/Contact/fields/First_Touch_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Campaign_Status__c</fullName>
    <label>First Touch Campaign Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>