force-app/main/default/objects/Contact/fields/Flywheel_Certified_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Flywheel_Certified_Contact_Date__c</fullName>
    <description>Date field populated when specific Industrial Partner contact becomes flywheel certified</description>
    <label>Flywheel Certified Contact (Date)</label>
    <type>Date</type>
</CustomField>