force-app/main/default/objects/Contact/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <formula>IF(Account.BillingCountry = &quot;Canada&quot;, CASE(Account.BillingState,
&apos;Alberta&apos;,&apos;Canada West&apos;,
&apos;British Columbia&apos;,&apos;Canada West&apos;,
&apos;Manitoba&apos;,&apos;Canada West&apos;,
&apos;New Brunswick&apos;,&apos;Canada East&apos;,
&apos;Newfoundland and Labrador&apos;,&apos;Canada East&apos;,
&apos;Northwest Territories&apos;,&apos;Canada West&apos;,
&apos;Nova Scotia&apos;,&apos;Canada East&apos;,
&apos;Nunavut&apos;,&apos;Canada West&apos;,
&apos;Ontario&apos;,&apos;Canada East&apos;,
&apos;Prince Edward Island&apos;,&apos;Canada East&apos;,
&apos;Quebec&apos;,&apos;Canada East&apos;,
&apos;Saskatchewan&apos;,&apos;Canada West&apos;,
&apos;Yukon Territories&apos;,&apos;Canada West&apos;,
&quot;Canada&quot;),
CASE(Account.BillingState,         
&quot;Alabama&quot;, &quot;South &amp; Midwest&quot;,
&quot;Alaska&quot;, &quot;West&quot;,  
&quot;Arizona&quot;, &quot;West&quot;, 
&quot;Arkansas&quot;, &quot;Central&quot;, 
&quot;California&quot;, &quot;West&quot;,  
&quot;Colorado&quot;, &quot;West&quot;,  
&quot;Connecticut&quot;, &quot;Northeast&quot;,  
&quot;Delaware&quot;, &quot;Northeast&quot;,  
&quot;District of Columbia&quot;, &quot;Northeast&quot;,  
&quot;Florida&quot;, &quot;South &amp; Midwest&quot;, 
&quot;Georgia&quot;, &quot;South &amp; Midwest&quot;, 
&quot;Hawaii&quot;, &quot;West&quot;,   
&quot;Idaho&quot;, &quot;West&quot;,   
&quot;Illinois&quot;, &quot;South &amp; Midwest&quot;, 
&quot;Indiana&quot;, &quot;South &amp; Midwest&quot;, 
&quot;Iowa&quot;, &quot;Central&quot;,  
&quot;Kansas&quot;, &quot;West&quot;,  
&quot;Kentucky&quot;, &quot;South &amp; Midwest&quot;,
&quot;Louisiana&quot;, &quot;Central&quot;, 
&quot;Maine&quot;, &quot;Northeast&quot;,  
&quot;Maryland&quot;, &quot;Northeast&quot;,  
&quot;Massachusetts&quot;, &quot;Northeast&quot;, 
&quot;Michigan&quot;, &quot;Northeast&quot;,  
&quot;Minnesota&quot;, &quot;Central&quot;,  
&quot;Mississippi&quot;, &quot;Central&quot;,  
&quot;Missouri&quot;, &quot;Central&quot;, 
&quot;Montana&quot;, &quot;West&quot;, 
&quot;Nebraska&quot;, &quot;West&quot;,  
&quot;Nevada&quot;, &quot;West&quot;,  
&quot;New Hampshire&quot;, &quot;Northeast&quot;,  
&quot;New Jersey&quot;, &quot;Northeast&quot;,  
&quot;New Mexico&quot;, &quot;West&quot;,   
&quot;New York&quot;, &quot;Northeast&quot;, 
&quot;North Carolina&quot;, &quot;South &amp; Midwest&quot;,  
&quot;North Dakota&quot;, &quot;West&quot;,  
&quot;Ohio&quot;, &quot;Northeast&quot;,   
&quot;Oklahoma&quot;, &quot;Central&quot;, 
&quot;Oregon&quot;, &quot;West&quot;,  
&quot;Pennsylvania&quot;, &quot;Northeast&quot;,  
&quot;Rhode Island&quot;, &quot;Northeast&quot;,  
&quot;South Carolina&quot;, &quot;South &amp; Midwest&quot;,
&quot;South Dakota&quot;, &quot;West&quot;,  
&quot;Tennessee&quot;, &quot;South &amp; Midwest&quot;,  
&quot;Texas&quot;, &quot;Central&quot;,  
&quot;Utah&quot;, &quot;West&quot;,  
&quot;Vermont&quot;, &quot;Northeast&quot;,  
&quot;Virginia&quot;, &quot;South &amp; Midwest&quot;,   
&quot;Washington&quot;, &quot;West&quot;,  
&quot;West Virginia&quot;, &quot;South &amp; Midwest&quot;,  
&quot;Wisconsin&quot;, &quot;Central&quot;,  
&quot;Wyoming&quot;, &quot;West&quot;,  
&quot;Other&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geography</label>
    <type>Text</type>
</CustomField>