force-app/main/default/objects/Contact/fields/Hashtag__c.field-meta.xml
<CustomField>
    <fullName>Hashtag__c</fullName>
    <label>Contact Hashtag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>