force-app/main/default/objects/Contact/fields/Hot_Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Hot_Transfer_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hot Transfer functionality. inbound lead comes in, ADR transfers the call directly to a rep so they can see a demo right away.</description>
    <label>Hot Transfer To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>