force-app/main/default/objects/Contact/fields/Inbound_Call_Email_Source__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Call_Email_Source__c</fullName>
    <formula>OR(
 ISPICKVAL(Source__c, &apos;Inbound call / email&apos;),
 ISPICKVAL(LeadSource, &apos;Inbound call / email&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inbound Call/Email Source</label>
    <type>Checkbox</type>
</CustomField>