force-app/main/default/objects/Contact/fields/Inbound_Form_Message_to_append__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Form_Message_to_append__c</fullName>
    <description>Used when converting to an existing lead to append to the contact&apos;s inbound form message.</description>
    <label>Inbound Form Message to append</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>